--- a/.github/workflows/deploy-temp.yml
+++ b/.github/workflows/deploy-temp.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Upload GitHub Pages artifact
         uses: actions/upload-pages-artifact@v2
         with:
-          path: docs  # 👈 Match the folder where index.html is located
+          path: docs
 
       - name: Deploy to GitHub Pages
         uses: actions/deploy-pages@v2
